--- a/_includes/nav-social.html
+++ b/_includes/nav-social.html
@@ -1,14 +1,10 @@
 <nav class="nav  nav--social">
-<h6>Contact me:</h6>
-{% for link in site.contact %}
-    {% assign id = link[0] | downcase %}
-    {% if id == "email" %}
-        {% capture refer %}mailto:{{link[1]}}{% endcapture %}
-    {% elsif id == "phone" %}
-        {% capture refer %}tel:{{link[1]}}{% endcapture %}
-    {% else %}
-        {% capture refer %}{{link[1]}}{% endcapture %}
+  {% for link in site.social_links %}
+    {% if link[1] != blank %}
+      {% assign id = link[0] | downcase %}
+      <a href="{{ link[1] }}">
+        {% include icon.html id=id title=id %}
+      </a>
     {% endif %}
-<a class="link" target="_blank" href="{{refer}}" title="{{link[0]}}">{% include icon.html id=id %}</a>
-{% endfor %}
+  {% endfor %}
 </nav>
