--- a/_includes/site-form.html
+++ b/_includes/site-form.html
@@ -20,18 +20,18 @@
 >
   <fieldset class="fieldset  form__fieldset">
     <legend class="legend form__legend">{{ name }}</legend>
-    <label class="label" for="name--{{ name_id }}">Name: <span class="required">*</span></label>
-    <input class="input" id="name--{{ name_id }}" type="text" name="name" value="" placeholder="Your Name" required="required" />
+    <label class="label" for="name--{{ name_id }}">Nome: <span class="required">*</span></label>
+    <input class="input" id="name--{{ name_id }}" type="text" name="name" value="" placeholder="Seu nome" required="required" />
 
-    <label class="label" for="email--{{ name_id }}">Email Address: <span class="required">*</span></label>
+    <label class="label" for="email--{{ name_id }}">E-mail: <span class="required">*</span></label>
     <input class="input" id="email--{{ name_id }}" type="email" name="email" value="" placeholder="email@website.com" required="required" />
 
-    <label class="label" for="message--{{ name_id }}">Message: <span class="required">*</span></label>
-    <textarea class="textarea" id="message--{{ name_id }}" name="message" placeholder="Your message..." required="required"></textarea>
+    <label class="label" for="message--{{ name_id }}">Mensagem: <span class="required">*</span></label>
+    <textarea class="textarea" id="message--{{ name_id }}" name="message" placeholder="Sua mensagem..." required="required"></textarea>
 
     <input class="button" type="submit" value="Send message" />
     <br/>
-    <small class="small"><span class="required">*</span> indicates a required field</small>
+    <small class="small"><span class="required">*</span> todos os campos são obrigatórios</small>
 
     {% if include.netlify_form %}
       <label  style="display:none">Don’t fill this out if you’re human: <input name="bot-field" /></label>
@@ -47,7 +47,7 @@
     var email = "{{ site.email | split: "" | reverse | join: "" }}";
     var unraveledEmail = email.split("").reverse().join("");
     var form = document.querySelector(".form--{{ name_id }}");
-      form.setAttribute("action", "https://formspree.io/" + unraveledEmail);
+      form.setAttribute("action", "https://formspree.io/f/xvodzgkl");
   </script>
-  <noscript>Please enable JavaScript to use the form.</noscript>
+  <noscript>Por favor, habilite javascript nesta página para usar o formulário.</noscript>
 {% endunless %}
