--- a/_includes/site-form.html
+++ b/_includes/site-form.html
@@ -29,7 +29,7 @@
     <label class="label" for="message--{{ name_id }}">Mensagem: <span class="required">*</span></label>
     <textarea class="textarea" id="message--{{ name_id }}" name="message" placeholder="Sua mensagem..." required="required"></textarea>
 
-    <input class="button" type="submit" value="Send message" />
+    <input class="button" type="submit" value="Enviar" />
     <br/>
     <small class="small"><span class="required">*</span> todos os campos são obrigatórios</small>
 
