--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
+  overflow: auto;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   background-color: rgb(0,0,0); /* Fallback color */
