--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,11 @@ layout: default
 
 {% include site-header.html %}
 
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+
 <main class="main  container">
 
   <article class="article  article--page  content  typeset">
