--- a/_includes/signature_checker.html
+++ b/_includes/signature_checker.html
@@ -51,7 +51,7 @@
         `;
     }).join('');
     if ((resultsArray.length == 0) || (this.value == '')) {
-      resultsList.innerHTML = `<p>Desculpe, documento não encontrado.</p>`;
+      resultsList.innerHTML = `<p>O documento não foi encontrado. Verifique se o identificador está correto ou entre em contato.</p>`;
     } else {
       resultsList.innerHTML = html;
     }
