--- a/_includes/nav-header.html
+++ b/_includes/nav-header.html
@@ -10,7 +10,7 @@
       {% endif %}
 
       <li class="item  item--nav{% if item.url == page.url %}  item--current{% endif %}">
-        <a href="{{ url }}">{{ item.title }}</a>
+        <span><a href="{{ url }}">{{ item.title }}</a></span>
       </li>
     {% endfor %}
   </ul>
