--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,6 +8,7 @@ layout: default
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
+<script src="https://kit.fontawesome.com/032d552cb2.js" crossorigin="anonymous"></script>
 
 <main class="main  container">
 
