Better font color for projects.html page

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -89,12 +89,12 @@ li::first-line {
   color: #05bf85;
 }
 
-.pub-authors {
+.pubauthors {
   color: #D3D3D3;
   font-size: 12pt;
 }
 
-.pub-location {
+.publocation {
   color: #05bf85;
   font-weight: bold;
 }
