--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -45,8 +45,10 @@
           <span class="pubauthors">{{pub.authors}}</span><br>
           <span class="publocation"><b>{{pub.location}}</b></span><br>
           {% if pub.award != null %}
-            <span class="fas fa-file-pdf" style="margin-right: 5px;"></span>
-            <a href="{{pub.award}}" class="chip" target="_blank" rel="noopener noreferrer">Premiação</a>
+            <a href="{{pub.award}}" class="chip" target="_blank" rel="noopener noreferrer">
+              <span class="fas fa-award" style="margin-right: 5px;"></span>
+              PDF
+            </a>
           {% endif %}
           {% if pub.details != null %}
             <a href="{{pub.details}}" class="chip" target="_blank" rel="noopener noreferrer">Detalhes</a>
