--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -47,7 +47,7 @@
           {% if pub.award != null %}
             <a href="{{pub.award}}" class="chip" target="_blank" rel="noopener noreferrer">
               <span class="fas fa-award" style="margin-right: 5px;"></span>
-              PDF
+              Award
             </a>
           {% endif %}
           {% if pub.details != null %}
