--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -44,12 +44,6 @@
           <b><span class="fas fa-file-alt" style="margin-right:10px" style="margin-right: 5px;"></span>{{pub.title}}</b><br>
           <span class="pubauthors">{{pub.authors}}</span><br>
           <span class="publocation"><b>{{pub.location}}</b></span><br>
-          {% if pub.award != null %}
-            <a href="{{pub.award}}" class="chip" target="_blank" rel="noopener noreferrer">
-              <span class="fas fa-award" style="margin-right: 5px;"></span>
-              Award
-            </a>
-          {% endif %}
           {% if pub.details != null %}
             <a href="{{pub.details}}" class="chip" target="_blank" rel="noopener noreferrer">Detalhes</a>
           {% endif %}
@@ -57,6 +51,12 @@
             <a href="{{pub.pdf}}" class="chip" target="_blank" rel="noopener noreferrer">
               <span class="fas fa-file-pdf" style="margin-right: 5px;"></span>
               PDF
+            </a>
+          {% endif %}
+          {% if pub.award != null %}
+            <a href="{{pub.award}}" class="chip" target="_blank" rel="noopener noreferrer">
+              <span class="fas fa-award" style="margin-right: 5px;"></span>
+              Prêmio
             </a>
           {% endif %}
           {% if pub.slides != null %}
