--- a/_includes/site-feature.html
+++ b/_includes/site-feature.html
@@ -1,15 +1,157 @@
-{% assign feature_text = page.feature_text %}
+{% assign feature_title = page.feature_title %}
+{% assign feature_description = page.feature_description %}
 {% assign feature_image = page.feature_image %}
+{% assign feature_text = page.feature_text %}
 {% if page.collectionpage %}
-  {% assign collectiondata = site.collections | where: "label", page.collectionpage | first %}
-  {% assign feature_text = collectiondata.feature_text %}
-  {% assign feature_image = collectiondata.feature_image %}
+{% assign collectiondata = site.collections | where: "label", page.collectionpage | first %}
+{% assign feature_text = collectiondata.feature_text %}
+{% assign feature_image = collectiondata.feature_image %}
 {% endif %}
 
-{% if feature_text or feature_image %}
-  <div class="feature"{% if feature_image %} style="background-image: url({{ feature_image }})"{% endif %}>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" charset="utf-8"></script>
+
+<script type="text/javascript">
+  $(function() {
+    console.log("Olá mundo");
+    var header = $('.network-header'),
+      canvas = $('<canvas></canvas>').appendTo(header)[0],
+      ctx = canvas.getContext('2d'),
+      color = '#05bf85',
+      textColor = '#FFF',
+      idle = null,
+      mousePosition;
+
+    canvas.width = window.innerWidth;
+    canvas.height = header.outerHeight();
+    canvas.style.display = 'block';
+
+
+
+    var mousePosition = {
+        x: canvas.width / 2,
+        y: canvas.height / 2
+      },
+      dots = {
+        nb: 100,
+        distance: 80,
+        d_radius: 300,
+        array: []
+      };
+
+    function setCanvasTypefaceStyle(c) {
+      c.fillStyle = textColor
+      c.lineWidth = 3;
+      c.strokeStyle = textColor
+      c.font = 'bold 42px Lato';
+      c.textAlign = "center";
+    }
+
+    function setCanvasLineStyle(c) {
+      c.fillStyle = color;
+      c.lineWidth = .2;
+      c.strokeStyle = color;
+    }
+
+    function drawText(canvasElement) {
+      setCanvasLineStyle(ctx)
+
+    }
+
+    function Dot() {
+      this.x = Math.random() * canvas.width;
+      this.y = Math.random() * canvas.height;
+
+      this.vx = -.5 + Math.random();
+      this.vy = -.5 + Math.random();
+
+      this.radius = Math.random();
+    }
+
+    Dot.prototype = {
+      create: function() {
+        ctx.beginPath();
+        ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2, false);
+        ctx.fill();
+      },
+
+      animate: function() {
+
+        for (var i = 0, dot = false; i < dots.nb; i++) {
+
+          dot = dots.array[i];
+
+          if (dot.y < 0 || dot.y > canvas.height) {
+            dot.vx = dot.vx;
+            dot.vy = -dot.vy;
+          } else if (dot.x < 0 || dot.x > canvas.width) {
+            dot.vx = -dot.vx;
+            dot.vy = dot.vy;
+          }
+          dot.x += dot.vx;
+          dot.y += dot.vy;
+        }
+      },
+
+      line: function() {
+        for (var i = 0; i < dots.nb; i++) {
+          for (var j = 0; j < dots.nb; j++) {
+            i_dot = dots.array[i];
+            j_dot = dots.array[j];
+
+            if ((i_dot.x - j_dot.x) < dots.distance && (i_dot.y - j_dot.y) < dots.distance && (i_dot.x - j_dot.x) > -dots.distance && (i_dot.y - j_dot.y) > -dots.distance) {
+              if ((i_dot.x - mousePosition.x) < dots.d_radius && (i_dot.y - mousePosition.y) < dots.d_radius && (i_dot.x - mousePosition.x) > -dots.d_radius && (i_dot.y - mousePosition.y) > -dots.d_radius) {
+                ctx.beginPath();
+                ctx.moveTo(i_dot.x, i_dot.y);
+                ctx.lineTo(j_dot.x, j_dot.y);
+                ctx.stroke();
+                ctx.closePath();
+              }
+            }
+          }
+        }
+      }
+    };
+
+    function createDots() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (var i = 0; i < dots.nb; i++) {
+        dots.array.push(new Dot());
+        dot = dots.array[i];
+        dot.create();
+      }
+
+      dot.line();
+      dot.animate();
+
+      drawText(ctx);
+    }
+
+    idle = setInterval(createDots, 1000 / 30);
+
+    $(canvas).on('mousemove mouseleave', function(e) {
+      if (e.type == 'mousemove') {
+        mousePosition.x = e.pageX;
+        mousePosition.y = e.pageY;
+      }
+      if (e.type == 'mouseleave') {
+        mousePosition.x = canvas.width / 2;
+        mousePosition.y = canvas.height / 2;
+      }
+    });
+  });
+</script>
+
+<noscript>
+  <div class="feature" {% if feature_image %} style="background-image: url({{ feature_image }})" {% endif %}>
     <div class="container  typeset">
-      {{ feature_text | markdownify }}
     </div>
   </div>
-{% endif %}
+</noscript>
+
+
+<div class="network-header">
+</div>
+<div id="labelDiv">
+  <h1 class="page_title">{{ feature_title }}</h1>
+  <strong style="padding-top: 20px;">{{ feature_description }}</strong>
+</div>
