--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -7,7 +7,6 @@ $backgroundColour: #121212 !default;
 $codeBackgroundColour: #fafafa !default;
 $featureBackgroundColour: #f9fafa !default;
 $accentColour: #05bf85 !default;
-
 // Text colours
 $headingColour: #FFFFFF !default;
 $bodyColour: #FFFFFF !default;
@@ -16,7 +15,6 @@ $hoverColour: #FFF !default;
 $focusColour: #FFF !default;
 $captionColour: #FFF !default;
 $white: #ffffff !default;
-
 // Typography
 $bodytype: (
   font-family: "Lato, sans-serif",
@@ -24,23 +22,47 @@ $bodytype: (
   bold: 700,
   italic: italic,
   cap-height: 0.75
-) !default;
-
+)
+!default;
 $headingtype: (
   font-family: '"Lato", sans-serif',
   regular: 400,
   bold: 700,
   cap-height: 0.75
-) !default;
-
+)
+!default;
 $monospacetype: (
   font-family: "Menlo, monospace",
   regular: 400,
   cap-height: 0.68
-) !default;
+)
+!default;
 
 html {
   scroll-behavior: smooth;
+}
+
+#labelDiv {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 150px;
+  margin-left: auto;
+  align-items: center;
+  margin-right: auto;
+  text-align: center;
+  width: 100%;
+  z-index: 1;
+}
+
+.page_title {
+  font-size: 42px;
+  font-family: inherit;
+  font-weight: bold;
+  padding-bottom: 10px;
+  align-items: center;
+  text-align: center;
+  align-self: center;
 }
 
 .publication {
@@ -49,7 +71,7 @@ html {
 
 .project-image {
   display: block;
-  margin: auto
+  margin: auto;
 }
 
 .docs {
@@ -57,11 +79,16 @@ html {
   padding: 50px;
 }
 
-::selection{
+.network-header {
+  height: 100%;
+  width: 100%;
+}
+
+::selection {
   background: #989898 !important;
 }
 
-::-moz-selection{
+::-moz-selection {
   background: #989898 !important;
 }
 
@@ -71,7 +98,7 @@ html {
 
 .list--nav {
   text-align: start !important;
-  padding-inline-start: 20px !important
+  padding-inline-start: 20px !important;
 }
 
 li span {
@@ -107,11 +134,11 @@ li::first-line {
 }
 
 .footer {
-  background: #050505 !important
+  background: #050505 !important;
 }
 
 ul {
- list-style: none;
+  list-style: none;
 }
 
 li::before {
@@ -166,22 +193,22 @@ li::before {
   background-color: #05bf85;
 }
 
-* {box-sizing:border-box}
-
+* {
+  box-sizing: border-box;
+}
 /* Slideshow container */
 .slideshow-container {
   max-width: 1920px;
   position: relative;
   margin: auto;
 }
-
 /* Hide the images by default */
 .mySlides {
   display: none;
 }
-
 /* Next & previous buttons */
-.prev, .next {
+.next,
+.prev {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -195,18 +222,16 @@ li::before {
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
-
 /* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
+.next:hover,
+.prev:hover {
   background-color: rgba(0,0,0,0.8);
 }
-
 /* Caption text */
 .text {
   color: #f2f2f2;
@@ -217,7 +242,6 @@ li::before {
   width: 100%;
   text-align: center;
 }
-
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
@@ -226,7 +250,6 @@ li::before {
   position: absolute;
   top: 0;
 }
-
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
@@ -239,10 +262,10 @@ li::before {
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active,
+.dot:hover {
   background-color: #717171;
 }
-
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
@@ -250,15 +273,23 @@ li::before {
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
 @-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
+  from {
+    opacity: 0.4;
+  }
 
+  to {
+    opacity: 1;
+  }
+}
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 #showImg {
@@ -267,23 +298,31 @@ li::before {
   transition: 0.3s;
 }
 
-#showImg:hover {opacity: 0.7;}
-
+#showImg:hover {
+  opacity: 0.7;
+}
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
   left: 0;
   top: 0;
   overflow: auto;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  background-color: rgb(0,0,0);
+  /* Fallback color */
+  background-color: rgba(0,0,0,0.9);
+  /* Black w/ opacity */
 }
-
 /* Modal Content (Image) */
 .modal-content {
   margin: auto;
@@ -291,7 +330,6 @@ li::before {
   width: 100%;
   max-width: 800px;
 }
-
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
 #caption {
   margin: auto;
@@ -303,18 +341,21 @@ li::before {
   padding: 10px 0;
   height: 150px;
 }
-
 /* Add Animation - Zoom in the Modal */
-.modal-content, #caption {
+#caption,
+.modal-content {
   animation-name: zoom;
   animation-duration: 0.6s;
 }
-
 @keyframes zoom {
-  from {transform:scale(0)}
-  to {transform:scale(1)}
-}
+  from {
+    transform: scale(0);
+  }
 
+  to {
+    transform: scale(1);
+  }
+}
 /* The Close Button */
 .close {
   position: absolute;
@@ -326,23 +367,19 @@ li::before {
   transition: 0.3s;
 }
 
-.close:hover,
-.close:focus {
+.close:focus,
+.close:hover {
   color: #bbb;
   text-decoration: none;
   cursor: pointer;
 }
-
 /* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 700px) {
   .modal-content {
     width: 100%;
   }
 }
-
-
 // Font import, if you're using a non-standard web font
 @import url("https://fonts.googleapis.com/css?family=Merriweather:400,700");
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
 @import "alembic";
