--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -46,23 +46,46 @@ html {
   position: absolute;
   left: 0;
   right: 0;
-  top: 150px;
+  top: 80px;
+  bottom: auto;
   margin-left: auto;
+  margin-top: auto;
+  margin-bottom: auto;
   align-items: center;
   margin-right: auto;
   text-align: center;
-  width: 100%;
+  width: 60%;
   z-index: 1;
 }
+
+.header-top {
+  position: relative;
+  height: 100%;
+  left: 0;
+  right: 0;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+}
+
+.network-header {
+  height: 100%;
+  width: 100%;
+}
+
 
 .page_title {
   font-size: 42px;
   font-family: inherit;
-  font-weight: bold;
+  font-weight: bolder;
   padding-bottom: 10px;
   align-items: center;
   text-align: center;
   align-self: center;
+}
+
+.page_description {
+  font-weight: bolder;
 }
 
 .publication {
@@ -79,10 +102,6 @@ html {
   padding: 50px;
 }
 
-.network-header {
-  height: 100%;
-  width: 100%;
-}
 
 ::selection {
   background: #989898 !important;
