--- a/assets/page.css
+++ b/assets/page.css
@@ -88,6 +88,14 @@
   line-height: 120px;
 }
 
+.header-title {
+  font-size: 30px;
+}
+
+h1 {
+  font-size: 24px;
+}
+
 /* .card {
 	 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	 background-color: white;
